--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
 <link href='https://api.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
 
 
+
+
+
 <style>
   body { margin:0; padding:0; }
-  #map { position:fixed; top:0; bottom:0; width:100%; height: 600px;}
+  #map { position:fixed; top:0; bottom:0; width:100%; height: 600px; z-index: 1;}
 
-  .w3-container{position: absolute; top:600px;}
 
 .mapboxgl-popup {
         max-width: 400px;
         font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+      
     }
+
+  
 </style>
 
 <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.min.js'></script>
@@ -28,24 +33,22 @@
 </head>
 <body>
 
-  <div id='map'></div>
-
-  <div class="w3-container">
-      <h2>W3.CSS Modal</h2>
-      <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Modal</button>
     
-      <div id="id01" class="w3-modal w3-animate-opacity">
-        <div class="w3-modal-content">
-          <div class="w3-container">
-            <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-            <p>Some text. Some text. Some text.</p>
-            <p>Some text. Some text. Some text.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
+  <div class="container"><div id='map'></div></div>
   
+
+  <div class="modal-wrapper" id="popup">
+    <div class="popup-contenedor">
+       <h2>modalllll</h2>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor deleniti...</p>
+       <a class="popup-cerrar" href="#">X</a>
+    </div>
+ </div>
+
+ 
+
+ 
+
 <script src="map.js"></script>
 </body>
 </html>
