--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>PlanValpo</title>
 </head>
 <body>
-  <p>loading</p>
+  
+  <div class="planValpo"><h1>PlanValpo</h1></div>
   
     <script type="text/javascript">
       
