--- a/map.html
+++ b/map.html
@@ -10,12 +10,16 @@
   <link rel="stylesheet" href="main.css">
   <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.min.js'></script>
 <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.css' type='text/css' />
+  
+  
+  
   <style>
     body { margin:0; padding:0; }
     #map { position:fixed; top:40px; bottom:0; width:100%; height: 100%; z-index: 1;}
     .mapboxgl-popup {
           max-width: 400px;
           font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+          z-index: 999;
       }
   </style>
 </head>
@@ -27,9 +31,9 @@
   <!---->
   <div id="cafeDelPoeta" class="modal-window">
     <div>
-      <a href="#modal-close" title="Close" class="modal-close">Close</a>
+      <a href="#modal-close" title="Close" class="modal-close">Cerrar</a>
       <h1>café del poeta</h1>
-      <div>asdasd</div>
+      <div><img src="img/cafepoeta.jpg" width="50%"></div>
     </div>
   </div>
   
@@ -38,53 +42,53 @@
   
   <div id="benditaPasta" class="modal-window">
       <div>
-        <a href="#modal-close" title="Close" class="modal-close">Close</a>
+        <a href="#modal-close" title="Close" class="modal-close">Cerrar</a>
         <h1>Bendita Pasta</h1>
-        <div>asdasd</div>
+        <div><img src="img/bendita.jpg" width="50%"></div>
       </div>
     </div>
     <!---->
 
     <div id="emporioLaRosa" class="modal-window">
         <div>
-          <a href="#modal-close" title="Close" class="modal-close">Close</a>
+          <a href="#modal-close" title="Close" class="modal-close">Cerrar</a>
           <h1>Emporio La Rosa</h1>
-          <div>asdasd</div>
+          <div><img src="img/emporio.jpg" width="50%"></div>
         </div>
       </div>
       <!---->
 
     <div id="nazca" class="modal-window">
         <div>
-          <a href="#modal-close" title="Close" class="modal-close">Close</a>
+          <a href="#modal-close" title="Close" class="modal-close">Cerrar</a>
           <h1>Nazca</h1>
-          <div>asdasd</div>
+          <div><img src="img/nazca.jpg" width="50%"></div>
         </div>
       </div>
       <!---->
   
   <div id="cinzano" class="modal-window">
     <div>
-      <a href="#modal-close" title="Close" class="modal-close">Close</a>
+      <a href="#modal-close" title="Close" class="modal-close">Cerrar</a>
       <h1>cinzano</h1>
-      <div>asdasd</div>
+      <div><img src="img/cinzano.jpg"width="50%"></div>
     </div>
   </div>
   <!---->
   
   <div id="mascara" class="modal-window">
     <div>
-      <a href="#modal-close" title="Close" class="modal-close">Close</a>
+      <a href="#modal-close" title="Close" class="modal-close">Cerrar</a>
       <h1>titulo</h1>
-      <div>asdasd</div>
+      <div><img src="img/mascara.jpg"width="50%"></div>
     </div>
   </div>
 
   <div id="knibal" class="modal-window">
       <div>
-        <a href="#modal-close" title="Close" class="modal-close">Close</a>
+        <a href="#modal-close" title="Close" class="modal-close">Cerrar</a>
         <h1>Otro K-Nibal</h1>
-        <div>asdasd</div>
+        <div><img src="img/knibal.jpg" width="50%"></div>
       </div>
     </div>
     <!---->
